# honours-pas

./: .eslintignore  .eslintrc.js  .gitignore  LICENSE  README.md  package.json  tsconfig.json
srv/: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example
srv/downcast-rs/src/: lib.rs
srv/migrations/2018-02-20-161344_create_users/: down.sql  up.sql
srv/migrations/2018-02-20-164753_create_staff/: down.sql  up.sql
srv/migrations/2018-02-20-165638_create_sessions/: down.sql  up.sql
srv/migrations/2018-02-20-170309_create_students/: down.sql  up.sql
srv/migrations/2018-02-20-172456_create_projects/: down.sql  up.sql
srv/migrations/2018-02-20-173344_create_student_selections/: down.sql  up.sql
srv/migrations/2018-02-20-175650_create_student_marks/: down.sql  up.sql
srv/migrations/2018-02-20-180802_create_student_comments/: down.sql  up.sql
srv/migrations/2018-03-20-201139_create_project_add_staff/: down.sql  up.sql
srv/migrations/2018-04-01-150752_cascade_last_session/: down.sql  up.sql
srv/pas_backend/: .gitignore  Cargo.toml
srv/pas_backend/src/: lib.rs  main.rs
srv/rocket/: README.md
srv/rocket/lib/: Cargo.toml
srv/rocket/lib/src/: lib.rs  rocket.rs
srv/src/: config.rs  fairing.rs  lib.rs  main.rs  migrate.rs  schema.rs  session.rs  util.rs
srv/src/authn/: ldap.rs  mod.rs  openid.rs  simple.rs
srv/src/controller/: v1.rs
srv/src/controller/v1/: errors.rs  macros.rs  me.rs  meta.rs  mod.rs  project.rs  session.rs  staff.rs  student.rs  (+1 more)
srv/src/db/: mod.rs  models.rs  project.rs  session.rs  staff.rs  student.rs  user.rs
(+70 files in other folders)
