[package]
name = "hpas"
version = "0.1.0"
authors = ["Robert T. <arkan@drakon.io>"]

[features]
default = []
insecure = []

[dependencies]
lazy_static = "~1.0"
regex = "~0.2"
serde = "~1.0"
serde_derive = "~1.0"
serde_json = "~1.0"
toml = "~0.4"
rocket = "~0.3"
rocket_codegen = "~0.3"
rocket_contrib = "~0.3"
clap = "~2.30"
log = "~0.4"
fern = "~0.5"
chrono = { version = "~0.4", features = ["serde"] }
diesel = { version = "~1.1", features = ["postgres", "chrono", "numeric"] }
diesel_migrations = "~1.1"
r2d2 = "~0.8"
r2d2-diesel = "~1.0"
ring-pwhash = "~0.12"
bigdecimal = "0.0.10"
num-traits = "~0.1"
rand = "0.4"
ldap3 = "~0.5"
time = "~0.1"
downcast-rs = "~1"
reqwest = "~0.8"
jsonwebtoken = "~4.0"

[patch.crates-io]
rocket = { path = "rocket/lib" }
downcast-rs = { path = "downcast-rs" }