[package]
name = "pas_backend"
version = "0.1.0"
authors = ["Robert T. <arkan@drakon.io>"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
toml = "0.4"
futures = "0.1.18"
hyper = "0.11.18"
tokio-core = "0.1.12"
clap = "2.30.0"
log = "0.4"
fern = "0.5"
chrono = { version = "0.4", features = ["serde"] }
